add base register system

--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,10 @@
         <input type="text" class="text-input" placeholder="Username">
         <input type="email" class="text-input" placeholder="Email">
         <input type="password" class="text-input" placeholder="Password">
-        <button class="btn-login"> Login </button>
+
+        <form action="/login" method="post">
+            <button type="submit" class="btn-login"> Login </button>
+        </form>
     </div>
         
     
