--- a/web/login.html
+++ b/web/login.html
@@ -15,14 +15,14 @@
     <div style="display: flex; justify-content: center; margin-top: 5%;">
 
     <div class="div-login" style="display: flex; flex-direction:column; width:20%">
-        <p class="title"> Login </p>
+        <p class="title"> SIGN IN </p>
         <input type="text" class="text-input" placeholder="Username">
         <input type="email" class="text-input" placeholder="Email">
         <input type="password" class="text-input" placeholder="Password">
 
         <form action="/login" method="post">
             <button type="submit" class="btn-login"> Login </button>
-            <p class="text">Don't have an account? <span class="text-link">Register</span>
+            <p class="text">Don't have an account? <span class="text-link">Sign Up</span>
         </form>
     </div>
 
