Main page container

--- a/web/index.html
+++ b/web/index.html
@@ -26,14 +26,21 @@
     <input type="text" class="text-query" placeholder="Search for..">
     </div>
 
-    <div  style="display: flex; justify-content: flex-end;">
+    <div style="display: flex; justify-content: flex-end;">
         <form action="/" method="post">
             <button class="navbar-tab" type="submit"> PROFILE </button>
         </form>
     </div>
 </div>
 
+<br>
+<br>
+
 <div class="forum-container">
+
+    <div class="container">
+        <p class="title"> Featured </p>
+    </div>
 
 </div>
 
@@ -116,6 +123,12 @@
     .forum-container {
         display: flex;
         justify-content: column;
+    }
+
+    .container {
+        display: flex;
+        justify-content: column;
+        background-color: var(--bg-dark);
     }
         
     </style>
