--- a/web/login.html
+++ b/web/login.html
@@ -16,9 +16,8 @@
 
     <div class="div-login" style="display: flex; flex-direction:column; width:20%">
         <p class="title"> SIGN IN </p>
-        <input type="text" class="text-input" placeholder="Username">
-        <input type="email" class="text-input" placeholder="Email">
-        <input type="password" class="text-input" placeholder="Password">
+        <input type="text" name="username" class="text-input" placeholder="Username">
+        <input type="password" name="passwd" class="text-input" placeholder="Password">
 
         <form action="/login" method="post">
             <button type="submit" class="btn-login"> Login </button>
