--- a/web/register.html
+++ b/web/register.html
@@ -15,14 +15,14 @@
     <div style="display: flex; justify-content: center; margin-top: 5%;">
 
     <div class="div-login" style="display: flex; flex-direction:column; width:20%">
-        <p class="title"> SIGN IN </p>
+        <p class="title"> SIGN UP </p>
         <input type="text" name="username" class="text-input" placeholder="Username">
         <input type="password" name="passwd" class="text-input" placeholder="Password">
 
-        <form action="/login" method="post">
-            <button type="submit" class="btn-login"> Login </button>
+        <form action="/register" method="post">
+            <button type="submit" class="btn-login"> Register </button>
         </form>
-        <p class="text">Don't have an account? <a class="text-link" href="/register">Sign Up</a></p>
+            <p class="text">Already have an account? <a class="text-link" href="/login">Sign In</a></p>
         
     </div>
 
@@ -37,7 +37,6 @@
     --dark: #2F3361;
     --bg-dark: #242854;
     --light: #FCD580;
-    --light-hover: #ffdf9a;
 }
 
 body {
@@ -100,14 +99,10 @@ body {
     color: aliceblue;
 }
 
-.text-link {
-    color: var(--light);
-}
-
 .text-link:hover {
     text-decoration: underline;
     cursor: pointer;
-    color: var(--light-hover);
+    color: var(--light);
 }
     
 
