add email field

--- a/web/register.html
+++ b/web/register.html
@@ -18,6 +18,7 @@
     <div class="div-login" style="display: flex; flex-direction:column; width:20%">
         <p class="title"> SIGN UP </p>
         <input type="text" name="username" class="text-input" placeholder="Username">
+        <input type="text" name="email" class="text-input" placeholder="Email">
         <input type="password" name="passwd" class="text-input" placeholder="Password">
 
         <form action="/register" method="post">
