--- a/web/register.html
+++ b/web/register.html
@@ -13,6 +13,10 @@
 
 <body>
 
+    <form action="/" method="post">
+        <button class="navbar-tab" type="submit"> HOME </button>
+    </form>
+    
     <div style="display: flex; justify-content: center; margin-top: 5%;">
 
     <div class="div-login" style="display: flex; flex-direction:column; width:20%">
