add username to website

--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
     <div style="display: flex; justify-content: flex-end;">
         <form action="/login" method="post">
             {{if .IsConnected}}
-            <button class="navbar-tab" type="submit"> PROFILE </button>
+            <button class="navbar-tab" type="submit"> {{.Username}} </button>
             {{else}}
             <button class="navbar-tab" type="submit" href="/login"> SIGN IN </button>
             {{end}}
