--- a/web/post.html
+++ b/web/post.html
@@ -16,7 +16,7 @@
     <div class="navbar">
         <div style="display: flex; gap: 5px">
             <form action="/" method="post">
-            <button class="navbar-tab" type="submit"> EXPLORE </button>
+            <button class="navbar-tab" type="submit"> HOME </button>
             </form>
         </div>
     </div>
@@ -24,14 +24,13 @@
     <div style="display: flex; justify-content: center; margin-top: 5%;">
 
     <div class="div-login" style="display: flex; flex-direction:column; width:20%">
-        <p class="title"> SIGN IN </p>
-        <form action="/login" method="post">
-        <input type="text" name="username" class="text-input" placeholder="Username">
-        <input type="password" name="passwd" class="text-input" placeholder="Password">
-        <button type="submit" class="btn-login"> Login </button>
+        <p class="title"> NEW POST </p>
+        <form action="/post" method="post">
+        <input type="text" name="topic" class="text-input" placeholder="Topic">
+        <input type="text" name="title" class="text-input" placeholder="Title">
+        <input type="text" name="postcontent" class="text-input" placeholder="Post">
+        <button type="submit" class="btn-login"> Post </button>
         </form>
-        <p class="text">Don't have an account? <a class="text-link" href="/register">Sign Up</a></p>
-        
     </div>
 
     </div>
