micro change title html

--- a/web/profile.html
+++ b/web/profile.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/style.css">
     <link href='https://fonts.googleapis.com/css?family=Tiny5' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-    <title>Profile - Forum</title>
+    <title> Forum </title>
 </head>
 
 <body>
